# simple_game

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  run.sh  vcpkg.json
include/: AssmipGLM.h  Bitmap.h  Camera.h  UtilsCubemap.h  assets.h  entities.h  fonts.h  imguiRenderer.h  maiApp.h  mai_config.h  mai_vk.h  model.h  shapes.h  skybox.h  textures.h  utils.h
resources/: entity.json  latin.fnt  trash.txt
resources/assets/soko-g-4-super-galeb/: soko_g-4_super_galeb.fbx
resources/flipbooks/explosion02/: explosion02-frame002.tga  explosion02-frame003.tga  explosion02-frame004.tga  explosion02-frame005.tga  explosion02-frame006.tga  explosion02-frame007.tga  explosion02-frame008.tga  explosion02-frame009.tga  explosion02-frame010.tga  explosion02-frame011.tga  explosion02-frame012.tga  explosion02-frame013.tga  explosion02-frame014.tga  explosion02-frame015.tga  explosion02-frame016.tga  explosion02-frame017.tga  explosion02-frame018.tga  explosion02-frame019.tga  explosion02-frame020.tga  explosion02-frame021.tga  explosion02-frame022.tga  explosion02-frame023.tga  (+77 more)
resources/t62m/: t62m.fbx
shaders/: font.frag  font.vert  imgui.frag  imgui.vert  model.vert  shap.frag  shap.vert  skybox.frag  skybox.sp  skybox.vert
shaders/spvs/: font.fspv  font.vspv  imgui.fspv  imgui.vspv  model.fspv  model.vspv  shap.fspv  shap.vspv  skybox.fspv  skybox.vspv
src/: UtilsCubemap.cpp  assets.cpp  entities.cpp  fonts.cpp  imguiRenderer.cpp  maiApp.cpp  mai_implementation.cpp  main.cpp  model.cpp  shapes.cpp  skybox.cpp  stbi_image.cpp  textures.cpp
